After finishing worksheet01

--- a/lecture_01/worksheet_01.ipynb
+++ b/lecture_01/worksheet_01.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Xudong Wang\n",
+    "\n",
+    "UID: U91936499\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -179,7 +179,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,7 +190,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is a version control system, which is used for tracking code during project development and can help manage changes.\n",
+    "\n",
+    "Github is a website, it is built around Git like a interface, developer can host the Git repositories and provide a place for collaboration.\n",
+    "In addition, it extends Git's functionality to a more user-friendly and collaborative platform."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,7 +207,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone repo-url my-repo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,10 +221,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Fork"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,7 +235,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No change. This is because Git is a distributed version control system, it creates a independent repo on local laptop, which will not synchronize automatically."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,10 +249,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git add\n",
+    "\n",
+    "git commit\n",
+    "\n",
+    "git push"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,7 +267,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I will first update my local repo, get the changes from the original repo. using `git fetch` and `git merge` to fetch and merge them into the local branch. For remote repo, once the local repo is up to date, use `git push` to push the changes to the remote fork"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,7 +281,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Most of the conflicts arise due to concurrent modification, multple developer make changes on the same parts and Git can't make a decision between these changes.\n",
+    "\n",
+    "I will `Identify the conflicts` through the mark Git provides, then edit these files and decide which changes can be accepted. After solving the markers, maybe `submit the right changes again` is good. In the end, test the cahnges."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,7 +297,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Github provide PR function\n",
+    "1. Fork the repo through the button in github(also can clone it to local)  \n",
+    "2. Create new branch \n",
+    "3. Make and Commit the changes\n",
+    "4. Push changes\n",
+    "5. Create the PR through Github with our new changes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,10 +316,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. `git status`: we can figure out the status of the branch\n",
+    "2. ` git branch`: list all the branch also can use `git branch new` to create new\n",
+    "3. `git checkout`: turn to other branch\n",
+    "4. `git diff`: figure out the difference between files\n",
+    "5. `git log`: commit history"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -366,10 +398,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://github.com/Hasturrr/polynomial"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -389,20 +422,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://github.com/gallettilance/Data-Science-Fundamentals/pull/313"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
