--- a/lecture_00/worksheet_00.ipynb
+++ b/lecture_00/worksheet_00.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "# Worksheet 00\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Xudong Wang\n",
+    "\n",
+    "UID: U91936499 \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -22,7 +23,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I want to learn more about DataScience and go deeper, like how to preprocess the datasets before send them to neural network. In addition, for credit, this is a core class. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,7 +37,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "My major is AI, and I want to work in this field, so I need to have a good understanding of the professional knowledge and learn some relavent courses. Learning how to handle massive data with tools. Data is very critical in so many field, learn much more about Data is beneficial."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +51,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Studying DataScience in undergraduate school, but not very good at it."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Math"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,13 +192,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "com = (lambda x, y, z: x < y < z)\n",
+    "exa1 = com(1,2,3)\n",
+    "exa2 = com(3,2,1)\n",
+    "\n",
+    "exa1, exa2"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -199,10 +223,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 8)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = lambda n: lambda x: x * n\n",
+    "a = g(2)(2)\n",
+    "b = g(4)(2)\n",
+    "a, b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,12 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, True, True]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = [-2, -1, 0, 1, 2]\n",
-    "gt_zero = map()\n",
+    "gt_zero = map(lambda x: x > 0, c)\n",
     "list(gt_zero)"
    ]
   },
@@ -296,12 +347,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, True, False, False]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = [1, 3, 6, 11, 2]\n",
-    "mul_of3 = map()\n",
+    "mul_of3 = map(lambda x: x%3 == 0, d)\n",
     "list(mul_of3)"
    ]
   },
@@ -318,12 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "evens = filter()\n",
+    "evens = filter(lambda x: x % 2 == 0, e)\n",
     "list(evens)"
    ]
   },
@@ -340,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -380,11 +453,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "factorial = lambda x : reduce()\n",
+    "factorial = lambda x : reduce(lambda x, y: x * y, range(1, x + 1)) if x > 0 else 1\n",
     "factorial(10)"
    ]
   },
@@ -397,16 +481,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
    "source": [
-    "sieve = lambda x : reduce()\n",
+    "sieve = lambda x : reduce(lambda r, x: r + [x] if all(x % p != 0 for p in r) else r, range(2, x), [])\n",
     "print(sieve(100))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -417,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -446,11 +537,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`if myBank.is_overdrawn`: checks the method itself, not the result of the method call. Since it is a method object, which is always considered truthy in Python, the if statement always evaluates to True. So the output always be OVERDRAWN"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +566,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For loop iterates over the range of values provided by `range(4)`, which output is 0~4. `i=10` will not alter the loop output, if we want to output 10, we should call i again"
+   ]
   },
   {
    "cell_type": "code",
@@ -500,11 +595,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We first create a list `row`, and create `board` with three elements, where each element is a reference to the same `row` list, which reference to the same list. In this case, if we modify the first element of the first row of `board`, this will change all rows. `board[0][0], board[1][0], board[2][0]` will be changed"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +630,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For `results`, The return value of `some_func()` is appended to results on each iteration. Hence, results stores the values of x as it changes during each iteration: 0, then 1, then 2.\n",
+    "\n",
+    "For `funcs_results`, `some_func` is added to the `funcs` list during each iteration, but the function isn't executed yet. All functions in `funcs` reference the same x variable, not a copy of x at the time they were defined.\n",
+    "After the loop, x is 2. So, all `some_func` functions refer to this same x. The output is all 2"
+   ]
   },
   {
    "cell_type": "code",
@@ -565,7 +667,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We should open this text with a `read` permision(mode) in the second time, if we want to read the numbers back."
+   ]
   }
  ],
  "metadata": {
@@ -587,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
