First update of worksheet02

--- a/lecture_02/worksheet_02.ipynb
+++ b/lecture_02/worksheet_02.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 02\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Xudong Wang\n",
+    "\n",
+    "UID: U91936499\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -22,7 +23,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The potential to overlook lower-level details and implementation challenges, as it can be difficult to anticipate all issues at the initial planning stages. This might lead to encountering unexpected obstacles during the implementation phase, necessitating significant adjustments to the plan."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,7 +37,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Its potential difficulty in integrating individual components into a cohesive system. Additionally, without a clear, overarching plan from the outset, there's a risk of losing sight of the project's strategic goals"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +51,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. read the eroor carefully\n",
+    "2. re-read the code\n",
+    "3. Search online for help\n",
+    "4. Take a break"
+   ]
   },
   {
    "attachments": {},
@@ -58,10 +68,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 0 0 0 0 0 0\n",
+      "0 0 0 0 1 0 0 0\n",
+      "0 0 0 0 0 0 0 1\n",
+      "0 0 0 0 0 1 0 0\n",
+      "0 0 1 0 0 0 0 0\n",
+      "0 0 0 0 0 0 1 0\n",
+      "0 1 0 0 0 0 0 0\n",
+      "0 0 0 1 0 0 0 0\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Board:\n",
+    "    def __init__(self, size=8):\n",
+    "        self.size = size\n",
+    "        self.board = [[0] * size for _ in range(size)]\n",
+    "    \n",
+    "    def is_valid(self, row, col):\n",
+    "        # row\n",
+    "        for i in range(row):\n",
+    "            if self.board[i][col] == 1:\n",
+    "                return False\n",
+    "        # left diagonal\n",
+    "        for i, j in zip(range(row, -1, -1), range(col, -1, -1)):\n",
+    "            if self.board[i][j] == 1:\n",
+    "                return False\n",
+    "        # right diagnol\n",
+    "        for i, j in zip(range(row, -1, -1), range(col, self.size, 1)):\n",
+    "            if self.board[i][j] == 1:\n",
+    "                return False\n",
+    "        return True\n",
+    "    \n",
+    "    def place_queen(self, row, col):\n",
+    "        self.board[row][col] = 1\n",
+    "    \n",
+    "    def remove_queen(self, row, col):\n",
+    "        self.board[row][col] = 0\n",
+    "    \n",
+    "    def print_board(self):\n",
+    "        for row in self.board:\n",
+    "            print(\" \".join(str(cell) for cell in row))\n",
+    "        print(\"\\n\")\n",
+    "    \n",
+    "    def solve(self, row=0):\n",
+    "        if row == self.size:\n",
+    "            self.print_board()\n",
+    "            return True\n",
+    "        for col in range(self.size):\n",
+    "            if self.is_valid(row, col):\n",
+    "                self.place_queen(row, col)\n",
+    "                if self.solve(row + 1):\n",
+    "                    return True\n",
+    "                self.remove_queen(row, col)\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "board = Board()\n",
+    "board.solve()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,8 +292,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.15"
   },
   "orig_nbformat": 4,
   "vscode": {
