--- a/lecture_03/worksheet_03.ipynb
+++ b/lecture_03/worksheet_03.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Xudong Wang\n",
+    "\n",
+    "UID: U91936499 \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +27,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It should be falsifiable, which means it is possible for the hypothesis to be proven wrong."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +41,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As the previous example showed, ascending order with increment 2 between each data points, so I want to test whether ascending order is necessary. A sequence of numbers that are not in ascending order, like (4, 2, 6). \n",
+    "\n",
+    "also want to test whether the data should be integer. A sequence with non-integers, like (2.5, 4.5, 6.5)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +57,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I wowuld like to try C. If the rule is \"ascending sequences of numbers\" without any other constraints, then all three sequences A, B, and C follow the rule. If the rule involves ascending sequences with a specific increment, then option A, B and C would follow the rule. However, from the initial information provided, we know that (1, 3, 5) also follows the rule, which suggests that the increment does not have to be even. So I'd like to try the increment."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +75,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "First is positive and other are negative examples."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +89,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C. This is a negative example, which can provide much information about the rule, if we choose positive one, the result will always be confirmation and we can't get more information about this rule."
+   ]
   },
   {
    "attachments": {},
@@ -91,7 +104,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Process data. Using some tools to process the massive data, and have a overview of the data, get the information like types, numbers and so on.\n",
+    "2. Explore data. Understand the relationship between each.\n",
+    "3. Extract Features. Get the categorical data and find the attributes, which can be used to build a model.\n",
+    "4. Create Model. Using such features to build a model and do some prediction.\n",
+    "\n",
+    "Each steps can be done over and over again to find the best model for prediction."
+   ]
   },
   {
    "attachments": {},
@@ -109,7 +129,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Record. A bank customer account, includes Customer ID, Name, Email Address and so on.\n",
+    "2. Graph. Social network, user are nodes and the relationships betwenn them are edges.\n",
+    "3. Image. So many different kinds of images, like medical image(MRI, CT and etc.).\n",
+    "4. Text. Customer's feedback like comments."
+   ]
   },
   {
    "attachments": {},
@@ -122,7 +147,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Generative adversarial network to do data augmentation, for example some type of image are scarce, so people can use gan to enhance the datasets."
+   ]
   },
   {
    "attachments": {},
@@ -135,7 +162,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Image prediction, like in medical area, the cancer cell can be figured out by neural network."
+   ]
   }
  ],
  "metadata": {
