--- a/lecture_04/worksheet_04.ipynb
+++ b/lecture_04/worksheet_04.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Xudong Wang\n",
+    "\n",
+    "UID: U91936499 \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,7 +30,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "p is a parameter that determines the type of distance calculated by the formula. It controls the generalization level of the distance calculation. d can be the distance between each point and it can also be the dimension of the space.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,7 +44,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When p = 1, the Minkowski distance becomes the Manhattan distance, which is the sum of the absolute differences of their coordinates. p = 2 is Euclidean distance, the square root of the sum of the squares of the differences between corresponding coordinates."
+   ]
   },
   {
    "attachments": {},
@@ -61,7 +66,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The distance measurement approaches the Chebyshev distance and the distance between them are still 1. I think the difference is that the dimension is approaching to infinite, the space will be very abstract."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +80,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. As p < 1, if we put it in a 2d space, the distance between the origin and any other points, they will generate a triangle, which take the distance between them as hypotenuse, we can easily figure out x + y < d, this violates the basic rule of triangle.  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +94,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cosine similarity is particularly useful in scenarios where the magnitude of the vectors is not as important as the directionality, or where normalization of data is necessary."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +108,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Jaccard distance accounts for the similarity in terms of shared membership or absence of features across sets, without considering the magnitude of those features"
+   ]
   },
   {
    "attachments": {},
@@ -111,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['Alice', 'my', 'Bob', 'name', 'hello', 'is']\n",
+      "[1, 1, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -179,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,10 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'my', 'Bob', 'name', 'Claude', 'hello', 'is', 'hi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -211,10 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 1, 0, 1, 1, 0]\n",
+      "[0, 1, 1, 1, 0, 1, 1, 0]\n",
+      "[0, 1, 0, 1, 1, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "print(v2)\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,15 +266,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0, 1), 2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def manhattan_distance(vector1, vector2):\n",
+    "    return sum(abs(a-b) for a, b in zip(vector1, vector2))\n",
+    "\n",
+    "# Example\n",
+    "vectors = [v1, v2, v3]\n",
+    "\n",
+    "# Compute the Manhattan distances between all pairs of vectors\n",
+    "distances = {}\n",
+    "for i in range(len(vectors)):\n",
+    "    for j in range(i+1, len(vectors)):\n",
+    "        distances[(i, j)] = manhattan_distance(vectors[i], vectors[j])\n",
+    "\n",
+    "# Find the pair with the smallest Manhattan distance\n",
+    "most_similar_pair = min(distances, key=distances.get)\n",
+    "most_similar_distance = distances[most_similar_pair]\n",
+    "\n",
+    "most_similar_pair, most_similar_distance\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "v1 and v2, the distance is 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +322,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['Alice', 'Bob', 'Claude', 'hello', 'hi', 'is', 'my', 'name'],\n",
+       " [[1, 1, 0, 1, 0, 1, 1, 0],\n",
+       "  [0, 1, 1, 1, 0, 1, 1, 0],\n",
+       "  [0, 1, 0, 1, 1, 0, 1, 1],\n",
+       "  [1, 0, 0, 0, 1, 0, 0, 0],\n",
+       "  [0, 0, 1, 1, 0, 0, 0, 0],\n",
+       "  [0, 1, 1, 0, 0, 1, 1, 1],\n",
+       "  [1, 0, 1, 0, 1, 1, 1, 1],\n",
+       "  [0, 1, 0, 1, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "sentences = [\n",
+    "    \"hi Alice\",\n",
+    "    \"hello Claude\",\n",
+    "    \"Bob my name is Claude\",\n",
+    "    \"hi Claude my name is Alice\",\n",
+    "    \"hello Bob\"\n",
+    "]\n",
+    "\n",
+    "unique_words = set(word for sentence in sentences for word in sentence.split())\n",
+    "\n",
+    "# Sort the unique words to maintain consistent order\n",
+    "sorted_unique_words = sorted(list(unique_words))\n",
+    "\n",
+    "# Create a vector for each sentence\n",
+    "sentence_vectors = []\n",
+    "for sentence in sentences:\n",
+    "    words = sentence.split()\n",
+    "    vector = [1 if word in words else 0 for word in sorted_unique_words]\n",
+    "    sentence_vectors.append(vector)\n",
+    "\n",
+    "# Combine the original vectors with the sentence vectors\n",
+    "combined_vectors = vectors + sentence_vectors\n",
+    "\n",
+    "# Display the matrix of all vectors (original and sentences)\n",
+    "combined_matrix = combined_vectors\n",
+    "sorted_unique_words, combined_matrix\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,10 +383,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 8)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_rows = len(combined_matrix)\n",
+    "num_columns = len(combined_matrix[0]) if combined_matrix else 0\n",
+    "\n",
+    "num_rows, num_columns"
+   ]
   },
   {
    "attachments": {},
@@ -279,15 +414,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "sentence_distances = {}\n",
+    "for i in range(len(vectors), len(combined_matrix)):\n",
+    "    for j in range(i+1, len(combined_matrix)):\n",
+    "        sentence_distances[(i, j)] = manhattan_distance(combined_matrix[i], combined_matrix[j])\n",
+    "\n",
+    "# Find the pair of sentences with the smallest Manhattan distance\n",
+    "most_similar_sentence_pair = min(sentence_distances, key=sentence_distances.get)\n",
+    "most_similar_sentence_distance = sentence_distances[most_similar_sentence_pair]\n",
+    "\n",
+    "print(most_similar_sentence_pair)\n",
+    "most_similar_sentence_distance\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Row 5 and 8 are the most similar pairs, the distance is 2"
+   ]
   }
  ],
  "metadata": {
@@ -306,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.7.15"
   },
   "orig_nbformat": 4,
   "vscode": {
