--- a/lecture_04/worksheet_04.ipynb
+++ b/lecture_04/worksheet_04.ipynb
@@ -456,6 +456,75 @@
    "source": [
     "Row 5 and 8 are the most similar pairs, the distance is 2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 3 Challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a set of graphs $\\mathcal{G}$, each graph $G \\in \\mathcal{G}$ is defined over the same set of nodes $V$. The graphs are represented by their adjacency matrices, which are 2D arrays where each element indicates whether a pair of nodes is connected by an edge.\n",
+    "\n",
+    "Your task is to compute the pairwise distances between these graphs based on a specific distance metric. The distance $d(G, G')$ between two graphs $G = (V, E)$ and $G' = (V, E')$ is defined as the sum of the number of edges in $G$ but not in $G'$, and the number of edges in $G'$ but not in $G$. Mathematically, this can be expressed as:\n",
+    "\n",
+    "$$\n",
+    "d(G, G') = |E \\setminus E'| + |E' \\setminus E|.\n",
+    "$$\n",
+    "\n",
+    "##### Requirements:\n",
+    "1. **Input**: Should take a list of 2D numpy arrays as input. Each array represents the adjacency matrix of a graph.\n",
+    "\n",
+    "2. **Output**: Should output a pairwise distance matrix. If there are $n$ graphs in the input list, the output should be an $n \\times n$ matrix where the entry at position $(i, j)$ represents the distance between the $i^{th}$ and $j^{th}$ graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 4., 4.],\n",
+       "       [4., 0., 4.],\n",
+       "       [4., 4., 0.]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def compute_graph_distance(graphs):\n",
+    "    n = len(graphs)\n",
+    "    distance_matrix = np.zeros((n, n))\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            # Compute distance based on the given metric\n",
+    "            distance = np.sum(np.abs(graphs[i] - graphs[j]))\n",
+    "            distance_matrix[i, j] = distance_matrix[j, i] = distance\n",
+    "            \n",
+    "    return distance_matrix\n",
+    "\n",
+    "# Example usage\n",
+    "graphs_example = [\n",
+    "    np.array([[0, 1, 1], [1, 0, 0], [1, 0, 0]]),\n",
+    "    np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]]),\n",
+    "    np.array([[0, 0, 1], [0, 0, 1], [1, 1, 0]])\n",
+    "]\n",
+    "\n",
+    "distance_matrix = compute_graph_distance(graphs_example)\n",
+    "distance_matrix\n"
+   ]
   }
  ],
  "metadata": {
