--- a/lecture_05/worksheet_05.ipynb
+++ b/lecture_05/worksheet_05.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +131,7 @@
     "        TEMPFILE = \"temp.png\"\n",
     "\n",
     "        fig, ax = plt.subplots()\n",
+    "        plt.style.use('default')\n",
     "        ax.scatter(self.data[:, 0], self.data[:, 1], c=self.assignment)\n",
     "        ax.scatter(centers[:, 0], centers[:, 1], c='r')  # Plot centers in red\n",
     "        fig.savefig(TEMPFILE)\n",
