--- a/lecture_06/worksheet_06.ipynb
+++ b/lecture_06/worksheet_06.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 06\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Xudong Wang\n",
+    "UID: U91936499\n",
     "\n",
     "### Topics\n",
     "\n",
