--- a/lecture_13/worksheet_13.ipynb
+++ b/lecture_13/worksheet_13.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 13\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Xudong Wang\n",
+    "\n",
+    "UID: U91936499\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +30,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {
       "image/jpeg": {
        "height": 300,
@@ -58,7 +59,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No"
+   ]
   },
   {
    "attachments": {},
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1.\n",
+      "[1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 1. 1. 1.]\n"
      ]
     }
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +130,11 @@
    ],
    "source": [
     "def gini(node):\n",
+    "    if len(node) == 0:  # Avoid division by zero\n",
+    "        return 0\n",
     "    frequencies = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        sum(node)/len(node),\n",
+    "        1 - sum(node)/len(node)        \n",
     "    ]\n",
     "    return 1 - sum([f**2 for f in frequencies])\n",
     "\n",
@@ -146,26 +151,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of split on thalassemia =  0.13265306122448983\n",
-      "GINI of split on chest_pain =  0.5625\n"
+      "GINI of split on thalassemia =  0.23469387755102047\n",
+      "GINI of split on chest_pain =  0.4419642857142857\n"
      ]
     }
    ],
    "source": [
     "def gini_split(data, attr, target_name):\n",
-    "    ginis = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "    subsets = [\n",
+    "        data[data[attr] == 0] [target_name],\n",
+    "        data[data[attr] == 1] [target_name]\n",
     "    ]\n",
     "\n",
-    "    return ...\n",
+    "    return sum(gini(subset) * len(subset) / len(data) for subset in subsets)\n",
     "\n",
     "print(\"GINI of split on thalassemia = \", gini_split(data, \"thalassemia\", \"heart_disease\"))\n",
     "print(\"GINI of split on chest_pain = \", gini_split(data, \"chest_pain\", \"heart_disease\"))"
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +287,13 @@
    "source": [
     "def predict(tree : Node, example):\n",
     "    if tree.left is None and tree.right is None:\n",
-    "        ...\n",
+    "        return tree.vote\n",
     "    \n",
     "    if example[tree.attr] == 0:\n",
-    "        ...\n",
+    "        return predict(tree.left, example)\n",
     "\n",
     "    if example[tree.attr] == 1:\n",
-    "        ...\n",
+    "        return predict(tree.right, example)\n",
     "\n",
     "    return 0\n",
     "\n",
@@ -308,15 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_best_attribute(data, target_name):\n",
     "    best_attr = None\n",
+    "    lowest_gini = float('inf')\n",
     "    for attr in data.dtype.names:\n",
     "        if attr != target_name:\n",
-    "            ...\n",
+    "            gini = gini_split(data, attr, target_name)\n",
+    "            if gini < lowest_gini:\n",
+    "                lowest_gini = gini\n",
+    "                best_attr = attr\n",
     "    return best_attr"
    ]
   },
@@ -330,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -339,14 +348,14 @@
      "text": [
       "thalassemia = 0: \n",
       "| chest_pain = 0: \n",
-      "| | vote = 0\n",
+      "| | vote = 0.0\n",
       "| chest_pain = 1: \n",
-      "| | vote = 0\n",
+      "| | vote = 0.0\n",
       "thalassemia = 1: \n",
       "| chest_pain = 0: \n",
-      "| | vote = 1\n",
+      "| | vote = 1.0\n",
       "| chest_pain = 1: \n",
-      "| | vote = 1\n",
+      "| | vote = 1.0\n",
       "\n"
      ]
     }
@@ -373,15 +382,29 @@
     "\n",
     "\n",
     "    def gini_split(self, data, attr):\n",
-    "        ...\n",
+    "        subsets = self.get_subset(data, attr)\n",
+    "        total_len = len(data)\n",
+    "        weighted_gini = sum(gini(subset[self.target_name]) * len(subset) / total_len for subset in subsets)\n",
+    "        return weighted_gini\n",
     "\n",
     "\n",
     "    def get_majority_vote(self, data):\n",
-    "        ...\n",
+    "        target_values = data[self.target_name]\n",
+    "        vals, counts = np.unique(target_values, return_counts=True)\n",
+    "        index = np.argmax(counts)\n",
+    "        return vals[index]\n",
     "\n",
     "\n",
     "    def get_best_attribute(self, data):        \n",
-    "        ...\n",
+    "        best_attr = None\n",
+    "        lowest_gini = float('inf')\n",
+    "        for attr in data.dtype.names:\n",
+    "            if attr != self.target_name:\n",
+    "                current_gini = self.gini_split(data, attr)\n",
+    "                if current_gini < lowest_gini:\n",
+    "                    lowest_gini = current_gini\n",
+    "                    best_attr = attr\n",
+    "        return best_attr\n",
     "\n",
     "\n",
     "    def build_tree(self, data, depth):        \n",
@@ -436,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.7.15"
   },
   "orig_nbformat": 4,
   "vscode": {
