--- a/lecture_20/worksheet_20.ipynb
+++ b/lecture_20/worksheet_20.ipynb
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "not [-.788, .788]"
+    "[-.788, .788]"
    ]
   },
   {
@@ -288,6 +288,31 @@
    "metadata": {},
    "source": [
     "e) Verify this by running a simulation where you fix the interval and record the number of times in a given number of TRIALS that $\\hat\\beta$ falls in the interval."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval_min = -.788\n",
+    "interval_max = .788\n",
+    "\n",
+    "TRIALS = 10000\n",
+    "SAMPLE_SIZE = 100\n",
+    "\n",
+    "count = 0\n",
+    "for _ in range(TRIALS):\n",
+    "    x = -1.0 + 1.0 * np.random.random(SAMPLE_SIZE)\n",
+    "    y = 0.0 * x + np.random.randn(SAMPLE_SIZE)\n",
+    "    intercept = np.ones(np.shape(x)[0])\n",
+    "    X = np.array([intercept, x]).T\n",
+    "    beta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
+    "    if beta[1] > interval_min and beta[1] < interval_max :\n",
+    "        count += 1\n",
+    "\n",
+    "print(count / TRIALS)"
    ]
   },
   {
