--- a/lecture_22/worksheet_22.ipynb
+++ b/lecture_22/worksheet_22.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 22\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Xudong Wang\n",
+    "UID: U91936499\n",
     "\n",
     "### Topics\n",
     "\n",
